--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TimerMobileApp",
+  "name": "ReactNativeTest",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-reanimated": "^3.15.4",
+    "react-native-vector-icons": "^10.2.0",
+    "styled-components": "^6.1.13",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
